force-app/main/default/objects/BIS_AccountRole_Mapping__mdt/BIS_AccountRole_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used to configure mappings for account roles values received from external BIS systems (infobau / ibau).</description>
    <label>BIS AccountRole Mapping</label>
    <pluralLabel>BIS AccountRole Mappings</pluralLabel>
</CustomObject>