force-app/main/default/objects/BIS_AccountRole_Mapping__mdt/fields/BIS_Value__c.field-meta.xml
<CustomField>
    <fullName>BIS_Value__c</fullName>
    <label>BIS Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>