force-app/main/default/objects/BIS_AccountRole_Mapping__mdt/fields/SF_Label__c.field-meta.xml
<CustomField>
    <fullName>SF_Label__c</fullName>
    <label>SF Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>