force-app/main/default/objects/BIS_AccountRole_Mapping__mdt/fields/SF_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>SF_Picklist_Value__c</fullName>
    <label>SF Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>