force-app/main/default/objects/BIS_AccountRole_Mapping__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BIS_Value__c</columns>
    <columns>SF_Picklist_Value__c</columns>
    <columns>SF_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
    <language>en_US</language>
</ListView>